--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marine_app",
-  "homepage": "https://AAAtech4747.github.io/zamanmarine",
+  "homepage": "https://aaatech4747.github.io/zamanmarine/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,6 +24,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
